syntax = "proto3";

import "sigmap/sigmap.proto";
import "rpc/proto/rpc.proto";

option go_package = "sigmaos/dialproxy/proto";

message ListenReq {
        Taddr addr = 1;
        uint32 EndpointType = 2;
        Blob blob = 3;
};

message ListenRep {
        Rerror err = 1;
        TendpointProto endpoint = 2;
        uint64 listenerID = 3;
        Blob blob = 4;
};

message DialReq {
        TendpointProto endpoint = 1;
        Blob blob = 2;
};

message DialRep {
        Rerror err = 1;
        Blob blob = 2;
};

message AcceptReq {
        uint64 listenerID = 1;
        bool internalListener = 2;
        Blob blob = 3;
};

message AcceptRep {
        Rerror err = 1;
        Tprincipal principal = 2;
        Blob blob = 3;
}

message CloseReq {
        uint64 listenerID = 1;
        Blob blob = 2;
};

message CloseRep {
        Rerror err = 1;
        Blob blob = 2;
}

message NamedEndpointReq {
        string realmStr = 1;
        Blob blob = 2;
}

message NamedEndpointRep {
        Rerror err = 1;
        TendpointProto endpoint = 2;
        Blob blob = 3;
}

message InvalidateNamedEndpointReq {
        string realmStr = 1;
        Blob blob = 2;
}

message InvalidateNamedEndpointRep {
        Rerror err = 1;
        Blob blob = 2;
}
